--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:md": "remark . --frail",
     "lint:sensitive": "ban",
-    "lint:travis": "travis-lint .travis.yml"
+    "lint:travis": "travis-lint .travis.yml",
+    "generate:md": "remark . --output"
   },
   "devDependencies": {
     "@form8ion/commitlint-config": "1.0.7",
@@ -20,6 +21,7 @@
     "husky": "3.0.9",
     "npm-run-all": "4.1.5",
     "remark-cli": "7.0.1",
+    "remark-toc": "6.0.0",
     "travis-lint": "1.0.0"
   }
 }
