--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate:md": "remark . --output"
   },
   "devDependencies": {
+    "@commitlint/cli": "11.0.0",
     "@form8ion/commitlint-config": "1.0.12",
     "@form8ion/remark-lint-preset": "1.0.10",
     "ban-sensitive-files": "1.9.9",
