--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "awesome",
   "description": "A curated list of form8ion related tools",
   "license": "CC0",
+  "private": true,
   "repository": "form8ion/awesome",
   "bugs": "https://github.com/form8ion/awesome/issues",
   "homepage": "https://github.com/form8ion/awesome#readme",
@@ -10,7 +11,7 @@
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:md": "remark . --frail",
     "lint:sensitive": "ban",
-    "lint:travis": "travis-lint .travis.yml",
+    "lint:peer": "npm ls >/dev/null",
     "generate:md": "remark . --output"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "husky": "5.0.6",
     "npm-run-all": "4.1.5",
     "remark-cli": "9.0.0",
-    "remark-toc": "7.0.0",
-    "travis-lint": "1.0.0"
-  }
+    "remark-toc": "7.0.0"
+  },
+  "dependencies": {}
 }
