--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -24,5 +24,17 @@ jobs:
       - run: npm clean-install
       - run: npm audit signatures
       - run: npm test
+  workflow-result:
+    runs-on: ubuntu-latest
+    needs:
+      - verify
+    if: ${{ !cancelled() }}
+    steps:
+      - name: All matrix versions passed
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: exit 0
+      - name: Some matrix version failed
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
 permissions:
   contents: read
