--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "A curated list of form8ion related tools",
   "license": "CC0",
   "private": true,
+  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "repository": "form8ion/awesome",
   "bugs": "https://github.com/form8ion/awesome/issues",
   "homepage": "https://github.com/form8ion/awesome#readme",
-  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "scripts": {
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:md": "remark . --frail",
@@ -16,6 +16,7 @@
     "prepare": "husky install",
     "lint:lockfile": "lockfile-lint"
   },
+  "packageManager": "npm@11.4.1+sha512.fcee43884166b6f9c5d04535fb95650e9708b6948a1f797eddf40e9778646778a518dfa32651b1c62ff36f4ac42becf177ca46ca27d53f24b539190c8d91802b",
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@form8ion/commitlint-config": "2.0.6",
